--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 
 <body>
-
   <header class="header-bg">
     <div class="header">
       <a href="./">
         <img src="./img/bikcraft.svg" alt="Bikcraft">
-      </a>      
+      </a>
+
       <nav aria-label="primaria">
         <ul class="header-menu">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
@@ -25,6 +25,18 @@
       </nav>
     </div>
   </header>
+
+  <main class="introducao-bg">
+    <div class="introducao">
+      <div class="introducao-conteudo">
+        <h1>Bicicletas feitas sob medida<span>.</span></h1>
+        <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <a href="./bicicletas.html">Escolha a sua</a>
+      </div>
+      <img src="./img/fotos/introducao.jpg" alt="Bicicleta elétrica preta.">
+    </div>
+  </main>
+</body>
   
 </body>
 </html>
